--- a/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Properties/Resources.resx
+++ b/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Properties/Resources.resx
@@ -118,10 +118,31 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Earth" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Earth.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PNG_16x16\edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Multiverse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\multiverse.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ObjectTree" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\png_16x16\objecttree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToggleButton_closed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_closed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToggleButton_opened" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeNodeButton_closed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\png_16x16\treenodebutton_closed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeNodeButton_opened" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\png_16x16\treenodebutton_opened.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tree_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\png_32x32\tree_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
