--- a/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Properties/Resources.resx
+++ b/Collaborator/OwlEyes/Solution(s)/Virtual World Systems/Windows Desktop/Properties/Resources.resx
@@ -118,29 +118,68 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="AttributesButton_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened211.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AttributesButton_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PNG_16x16\treenodebutton_opened21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AttributesButton_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened2111.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChildElementsButton_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChildElementsButton_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChildElementsButton_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Earth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Earth.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PNG_16x16\edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MetaButton_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened2113.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MetaButton_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PNG_16x16\treenodebutton_opened212.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MetaButton_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened21112.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Multiverse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\multiverse.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ObjectButton_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened212.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ObjectButton_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened221.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ObjectButton_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened23.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ObjectTree" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\png_16x16\objecttree.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ToggleButton_closed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ToggleButton_closed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ToggleButton_empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\PNG_16x16\treenodebutton_opened1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ToggleButton_opened" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="ToggleButton_checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ToggleButton_opened.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToggleButton_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_opened1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ToggleButton_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ToggleButton_closed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TreeNodeButton_closed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\png_16x16\treenodebutton_closed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TreeNodeButton_empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PNG_16x16\treenodebutton_opened2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TreeNodeButton_opened" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\png_16x16\treenodebutton_opened.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
